update download cv button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>Great web design without functionality is like a sports car with no engine.” “My code DOESN'T work, I have no idea why. My code WORKS, I have no idea why.” “A designer knows he has achieved perfection not when there is nothing left to add, but when there is nothing left to take away."</p>
             <div class="btn-box">
                 <a href="#" >Hire Me</a>
-                <a href="#" >Let's Talk</a>
+                <a href="#" >Download CV</a>
             </div>
         </div>
         <div class="home-sci">
